--- a/src/db/app.json
+++ b/src/db/app.json
@@ -175,7 +175,7 @@
                      "price":1,
                      "default":true
                   },
-                  "olives":{
+                  "black_olives":{
                      "label":"Olives",
                      "price":1,
                      "default":true
@@ -201,59 +201,116 @@
             }
          }
       }
+
+
    ],
-   "orders":[],
-   "events": [
-   {
-     "id": 1,
-     "date": "2021-01-01",
-     "hour": "12:30",
-     "table": 1,
-     "repeat": false,
-     "duration": 4,
-     "ppl": 3,
-     "starters": []
-   },
-   {
-     "id": 2,
-     "date": "2021-01-01",
-     "hour": "16:00",
-     "table": 3,
-     "repeat": "daily",
-     "duration": 2,
-     "ppl": 3,
-     "starters": ["bread", "lemonWater"]
-   },
-   {
-     "id": 3,
-     "date": "2021-01-01",
-     "hour": "12:00",
-     "table": 3,
-     "repeat": "daily",
-     "duration": 2,
-     "ppl": 3,
-     "starters": ["bread", "lemonWater"]
-   },
-   {
-     "id": 4,
-     "date": "2021-01-01",
-     "hour": "13:00",
-     "table": 2,
-     "repeat": "daily",
-     "duration": 4,
-     "ppl": 3,
-     "starters": []
-   },
-   {
-     "id": 5,
-     "date": "2021-01-01",
-     "hour": "18:00",
-     "table": 2,
-     "repeat": "daily",
-     "duration": 2,
-     "ppl": 3,
-     "starters": ["lemonWater"]
-   }
- ],
- "bookings": []
+   
+   "orders" :[],
+
+   "event": [
+     {
+       "id": 1,
+       "date": "2021-08-11",
+       "hour": "12:30",
+       "table": 1,
+       "repeat": false,
+       "duration": 4,
+       "ppl": 3,
+       "starters": []
+     },
+     {
+       "id": 2,
+       "date": "2021-01-01",
+       "hour": "16:00",
+       "table": 3,
+       "repeat": "daily",
+       "duration": 2,
+       "ppl": 3,
+       "starters": ["bread", "lemonWater"]
+     },
+     {
+       "id": 3,
+       "date": "2021-01-01",
+       "hour": "12:00",
+       "table": 3,
+       "repeat": "daily",
+       "duration": 2,
+       "ppl": 3,
+       "starters": ["bread", "lemonWater"]
+     },
+     {
+       "id": 4,
+       "date": "2021-01-01",
+       "hour": "13:00",
+       "table": 2,
+       "repeat": "daily",
+       "duration": 4,
+       "ppl": 3,
+       "starters": []
+     },
+     {
+       "id": 5,
+       "date": "2021-01-01",
+       "hour": "18:00",
+       "table": 2,
+       "repeat": "daily",
+       "duration": 2,
+       "ppl": 3,
+       "starters": ["lemonWater"]
+     }
+   ],
+
+   "booking": [
+      {
+         "id": 1,
+         "date": "2021-08-26",
+         "hour": "12:30",
+         "table": 1,
+         "repeat": false,
+         "duration": 4,
+         "ppl": 3,
+         "starters": []
+       },
+       {
+         "id": 2,
+         "date": "2021-01-01",
+         "hour": "16:00",
+         "table": 3,
+         "repeat": "daily",
+         "duration": 2,
+         "ppl": 3,
+         "starters": ["bread", "lemonWater"]
+       },
+       {
+         "id": 3,
+         "date": "2021-01-01",
+         "hour": "12:00",
+         "table": 3,
+         "repeat": "daily",
+         "duration": 2,
+         "ppl": 3,
+         "starters": ["bread", "lemonWater"]
+       },
+       {
+         "id": 4,
+         "date": "2021-01-01",
+         "hour": "13:00",
+         "table": 2,
+         "repeat": "daily",
+         "duration": 4,
+         "ppl": 3,
+         "starters": []
+       },
+       {
+         "id": 5,
+         "date": "2021-01-01",
+         "hour": "18:00",
+         "table": 2,
+         "repeat": "daily",
+         "duration": 2,
+         "ppl": 3,
+         "starters": ["lemonWater"]
+       }
+      
+   ]
 }
